# tree_menu

./: .env  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/: manage.py
src/config/: settings.py  urls.py
src/menu_app/: admin.py  apps.py  models.py  urls.py  views.py
src/menu_app/management/commands/: create_admin.py  populate_db.py
src/menu_app/migrations/: 0001_initial.py  0002_alter_item_url.py
src/menu_app/templatetags/: menu_template_tag.py
src/menu_app/tests/: conftest.py  test_db.py  test_tags.py  test_view.py
src/static/css/: style.css
src/templates/: base.html
src/templates/menu_app/: index.html  menu.html
